@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.6.20) unstable; urgency=low
   * istream-pipe: fix formula in range assertion
   * http-cache-memcached: implemented "remove"
   * handler: added FastCGI handler
+  * fcgi-client: unref caller pool after socket release
 
  --
 
